# AdventOfCode

./: .gitignore  pyproject.toml
2024/Day1/: common.py  day1.py  part1.py  part2.py  pyproject.toml
adventofcode/twentytwentyfour/: common.py
adventofcode/twentytwentyfour/day_one/: common.py  part_one.py  part_two.py
