[project]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin McFarland",email = "mcfarke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
twentytwentyfour_day_one_part_one = "adventofcode.twentytwentyfour.day_one.part_one:main"
twentytwentyfour_day_one_part_two = "adventofcode.twentytwentyfour.day_one.part_two:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
